codama-macros/tests/codama_attribute/type_nodes/fixed_size_type_node/size_missing.fail.rs
use codama::codama;

#[codama(type = fixed_size(boolean))]
pub struct Test;

#[codama(type = fixed_size(type = boolean))]
pub struct TestExplicit;

fn main() {}
